🛑 Stop highlight tooltips from overflowing (#92)
* Stop highlight tooltips from overflowing

* Update src/components/ProblemText/ProblemText.tsx

--- a/src/index.css
+++ b/src/index.css
@@ -32,17 +32,6 @@
   z-index: 1;
 }
 
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: black transparent transparent transparent;
-}
-
 .tooltip:hover {
   border-bottom: 1px dotted black;
 }
